<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="IP_C" Id="{d049fc0b-7a1e-49b1-8032-9187caa313b8}">
    <Declaration><![CDATA[TYPE IP_C :
STRUCT
	C_PORT : WORD;						(*W Portnummer                                               *)
	C_IP : DWORD;						(*W IP-Adresse gepackt wwxxyyzz = www.xxx.yyy.zzz            *)
	C_STATE : BYTE;						(*R Verbindungsstatus ON/OFF + Flanke ON/OFF                 *)
	C_ENABLE : BOOL;					(*W Freigabe für Connect                                     *)
	R_OBSERVE : BOOL;					(*W Empfang ueberwachen                                      *)
	TIME_RESET : BOOL;					(*W Alle Timer ruecksetzen                                   *)
	ERROR : DWORD;					    (*R vvwwxxyy (vv = CON_ERROR, ww = SEN_ERROR, xx = REC_ERROR *)
	MAILBOX : ARRAY [1..16] OF BYTE;	(*I Mailbox: Datenbereich für Bausteindatenaustausch         *)
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>