<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_UDP_Buffer" Id="{9712d5ea-53df-4a76-af60-46353a016829}">
    <Declaration><![CDATA[TYPE ST_UDP_Buffer :
STRUCT	
	Ip_Adresss		: T_IPv4addr;
	nDriveMemberNr	: INT;
	nPLCMemberNr	: INT;
	SIZE 			: UINT;
	BUFFER 			: ARRAY[0..Pecom_TCP_Puffer_Size] OF BYTE;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>